WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225380
copy/paste error in Recorder::canAppendItemOfType
https://bugs.webkit.org/show_bug.cgi?id=225380
Summary
copy/paste error in Recorder::canAppendItemOfType
Cameron McCormack (:heycam)
Reported
2021-05-04 21:02:41 PDT
https://webkit-search.igalia.com/webkit/rev/a221ff61ad355d85ae240e1313c5906779f00692/Source/WebCore/platform/graphics/displaylists/DisplayListRecorder.cpp#131
> || type == ItemType::ApplyStrokePattern || type == ItemType::ApplyStrokePattern
One of these should presumably be ApplyFillPattern.
Attachments
Patch
(1.53 KB, patch)
2021-05-04 21:45 PDT
,
Cameron McCormack (:heycam)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-05-04 21:03:56 PDT
Good catch.
Cameron McCormack (:heycam)
Comment 2
2021-05-04 21:45:31 PDT
Created
attachment 427731
[details]
Patch
Cameron McCormack (:heycam)
Comment 3
2021-05-04 21:45:49 PDT
(Happy to add a test if needed.)
EWS
Comment 4
2021-05-05 15:30:41 PDT
Committed
r277046
(
237358@main
): <
https://commits.webkit.org/237358@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427731
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-05-05 15:31:15 PDT
<
rdar://problem/77578785
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug