Fix copy paste error in Recorder::canAppendItemOfType. https://bugs.webkit.org/show_bug.cgi?id=225380

Reviewed by Simon Fraser.

* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::canAppendItemOfType):


Canonical link: https://commits.webkit.org/237358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277046 268f45cc-cd09-0410-ab3c-d52691b4dbfc